--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,3 +4,13 @@ $--color-rojo: #ee8282;
 $--color-gris: #ddd;
 $--color-azul-oscuro: #1a5bbc93;
 $--color-amarillo-claro: #b97d2ee1;
+
+/* Variables para los colores */
+:root {
+    --color-crema: #f1e4c3ef;
+    --color-azul: #2e6fb9e1;
+    --color-rojo: #ee8282;
+    --color-gris: #ddd;
+    --color-azul-oscuro: #1a5bbc93;
+    --color-amarillo-claro: #b97d2ee1;
+}
