--- a/scss/_mainindex.scss
+++ b/scss/_mainindex.scss
@@ -35,6 +35,8 @@ article p, article a {
     color: #666;
     font-size: 18px;
 }
+/* Estilos de animación*/
+
 /* Estilos para pantallas grandes */
 @media (min-width: 1200px) {
     .main {
