--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -9,3 +9,5 @@
 @import "mainreseñas.scss";
 @import "mainvideos.scss";
 @import "footer.scss";
+@import "bucles.scss";
+@import "animaciones.scss";
