--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,8 +1,7 @@
 @charset "UTF-8";
 /* Importación de recursos */
-@import url("https://fonts.googleapis.com/css2?family=Heebo&display=swap");
-
 /* Variables para los colores */
+@import url("https://fonts.googleapis.com/css2?family=Heebo&display=swap");
 :root {
   --color-crema: #f1e4c3ef;
   --color-azul: #2e6fb9e1;
@@ -19,6 +18,16 @@ body {
   font-size: 1rem;
   font-weight: 400;
   margin: 0;
+}
+
+/* Variables para los colores */
+:root {
+  --color-crema: #f1e4c3ef;
+  --color-azul: #2e6fb9e1;
+  --color-rojo: #ee8282;
+  --color-gris: #ddd;
+  --color-azul-oscuro: #1a5bbc93;
+  --color-amarillo-claro: #b97d2ee1;
 }
 
 /* Estilos para el encabezado */
@@ -456,6 +465,55 @@ footer {
   .container-text-center, .row {
     margin: 10px, 10px, 10px, 10px;
   }
+}
+/*Bucle para contenedores*/
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.container .box {
+  flex: 0 0 calc(33.33% - 20px);
+  margin: 10px;
+  height: 200px;
+  background-color: #3498db;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease;
+}
+
+.container .box:hover {
+  transform: scale(1.1);
+}
+
+/*Animación para botones -Leer más- */
+.btn, .btn-primary {
+  transition: background-color 0.5s ease;
+}
+
+.btn:hover {
+  background-color: #3498db;
+}
+
+/*Animaciones de carga*/
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
 }
 
 /*# sourceMappingURL=estilos.css.map */
