--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -5,6 +5,7 @@ footer {
     text-align: center;
     padding: 5px 0;
     height: 100px;
+    padding-top: 10px;
 }
 /* Estilos para pantallas grandes */
 @media (min-width: 1200px) {
