--- a/scss/_mainreseñas.scss
+++ b/scss/_mainreseñas.scss
@@ -36,6 +36,10 @@ article p, article a {
     font-size: 18px;
 }
 
+.img.reseñas {
+    padding-left: 10px;
+}
+
 /* Estilos para pantallas grandes */
 @media (min-width: 1200px) {
     .main {
