--- a/scss/_resets.scss
+++ b/scss/_resets.scss
@@ -6,3 +6,8 @@ body {
     font-weight: 400;
     margin: 0;
 }
+
+/*Texto de identificación de página*/
+.text-page {
+    color: var(--color-rojo);
+}
