--- a/scss/_bucles.scss
+++ b/scss/_bucles.scss
@@ -4,10 +4,14 @@
     flex-wrap: wrap;
     justify-content: space-around;
   }
+
+.container .image-grid {
+  margin: 10px;
+}
   
   .container .box {
     flex: 0 0 calc(33.33% - 20px);
-    margin: 10px;
+    margin: 10px, 10px, 10px, 10px;
     height: 200px;
     background-color: #3498db;
     color: white;
@@ -19,4 +23,6 @@
   .container .box:hover {
     transform: scale(1.1);
   }
+
+
   
