--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,5 +1,6 @@
 /* Estilos para el footer */
 footer {
+    width: 100%;
     background-color: var(--color-amarillo-claro);
     color: #d3d0d0;
     text-align: center;
