--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,13 +1,8 @@
 /* Importación de recursos */
 @import "variables.scss";
 @import "fuentes.scss";
-@import "resets.scss";
+@import "reset.scss";
 @import "header.scss";
-@import "mainindex.scss";
-@import "maincontacto.scss";
-@import "mainnoticias.scss";
-@import "mainreseñas.scss";
-@import "mainvideos.scss";
 @import "footer.scss";
 @import "bucles.scss";
 @import "animaciones.scss";
