--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -61,6 +61,7 @@
   /* Estilos para el logo */
   .logo {
     max-width: 300px;
+    width: 300px;
     float: left;
     display: inline;
     padding-bottom: 5px;
