--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -52,7 +52,7 @@
   
   .navbar li:hover a, .navbar-toggler:hover {
     background-color: var(--color-gris);
-    color: #fff;
+    color: var(--color-blanco);
     padding: 5px;
     background-color: var(--color-azul-oscuro);
     height: 30px;
