--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -4,6 +4,11 @@ $--color-rojo: #ee8282;
 $--color-gris: #ddd;
 $--color-azul-oscuro: #1a5bbc93;
 $--color-amarillo-claro: #b97d2ee1;
+$--color-blanco: #ffffff;
+$--color-verde: #4CAF50;
+$--color-verde-claro: #45a049;
+$--color-negro: #333;
+$--color-gris-parrafo: #666;
 
 /* Variables para los colores */
 :root {
@@ -13,4 +18,9 @@ $--color-amarillo-claro: #b97d2ee1;
     --color-gris: #ddd;
     --color-azul-oscuro: #1a5bbc93;
     --color-amarillo-claro: #b97d2ee1;
+    --color-blanco: #ffffff;
+    --color-verde: #4CAF50;
+    --color-verde-claro: #45a049;
+    --color-negro: #333;
+    --color-gris-parrafo: #666;
 }
