--- a/scss/_animaciones.scss
+++ b/scss/_animaciones.scss
@@ -1,27 +1,65 @@
 /*Animación para botones -Leer más- */
-.btn, .btn-primary {
-    transition: background-color 0.5s ease;
-    width: 100px;
-    height: 50px;
-    padding: 10px 20px;  
+.btn,
+.btn-primary, .btn-secondary {
+  transition: background-color 0.5s ease;
+  width: 140px;
+  height: 50px;
+  padding: 10px 10px;
+  white-space: nowrap;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .btn:hover {
-  background-color: #2993da;
+  background-color: var(--color-azul);
+}
+
+.btn-secondary:hover {
+  background-color: var(--color-rojo);
 }
 
 /*Animaciones de carga*/
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
   }
-  
-  .loader {
-    border: 16px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 16px solid #3498db;
-    width: 120px;
-    height: 120px;
-    animation: spin 2s linear infinite;
+
+  100% {
+    transform: rotate(360deg);
   }
+}
+
+@keyframes stopAfter5s {
+  0% {
+    animation-play-state: running;
+  }
+
+  100% {
+    animation-play-state: paused;
+  }
+}
+
+.loader {
+  border: 16px solid var(--color-blanco);
+  border-radius: 50%;
+  border-top: 16px solid var(--color-azul-oscuro);
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite, stopAfter5s 5s forwards;
+}
+
+.content {
   
+  display: grid;
+  grid-template-rows: 0fr;
+  transition: .3s grid-template-row ease;
+}
+
+article:hover .content {
+  grid-template-rows: 1fr;
+}
+
+.content>div {
+  overflow: hidden;
+}
