--- a/scss/_bucles.scss
+++ b/scss/_bucles.scss
@@ -1,30 +1,33 @@
 /*Bucle para contenedores*/
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 
-  }
+}
 
-.container .image-grid, .container, .video-container {
+.container .image-grid,
+.container,
+.video-container {
   width: 100%;
   margin: 10px;
 }
-  
-  .container .box {
-    flex: 0 0 calc(33.33% - 20px);
-    margin: 10px, 10px, 10px, 10px;
-    height: 200px;
-    background-color: #3498db;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all 0.3s ease;
-  }
-  .container .box:hover {
-    transform: scale(1.1);
-  }
+
+.container .box {
+  flex: 0 0 calc(33.33% - 20px);
+  margin: 10px, 10px, 10px, 10px;
+  height: 200px;
+  background-color: var(--color-azul);
+  color: var(--color-blanco);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.3s ease;
+}
+
+.container .box:hover {
+  transform: scale(1.1);
+}
 
 .text-center {
   padding: 10px;
@@ -35,5 +38,3 @@ iframe {
   height: 315;
 
 }
-
-  
