--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -3,7 +3,7 @@ body {
     width: 100%;
     font-family: 'Heebo', sans-serif;
     overflow-x: hidden; 
-    font-size: 1rem;
+    font-size: 16px;
     font-weight: 400;
     margin: 0;
 }
@@ -22,7 +22,7 @@ textarea {
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
-    border: 1px solid #ccc;
+    border: 1px solid var(--color-gris);
     box-sizing: border-box;
 }
 
@@ -37,23 +37,23 @@ input[type=reset] {
 }
 
 input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
+    background-color: var(--color-verde);
+    color: var(--color-blanco);
     border: none;
 }
 
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: var(--color-verde-claro);
 }
 
 input[type=reset] {
     background-color: var(--color-azul-oscuro);
-    color: white;
+    color: var(--color-blanco);
     border: none;
 }
 
 input[type=reset]:hover {
-    background-color: #2177c7;
+    background-color: var(--color-azul-oscuro);
 }
 
 /* Estilos para pantallas grandes */
@@ -94,17 +94,24 @@ main h1 {
     text-align: center;
     padding: 30px;
     padding-left: 100px;
+    margin: 20px;
 }
 
-h2, h3, h4 {
+h2 {
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+h3, h4 {
     text-align: center;
     font-size: 16px;
-    font-weight: bold;
+    font-weight: medium;
 }
 
 /* Estilos para los artículos */
 article {
-    background-color: #fff;
+    background-color: var(--color-blanco);
     padding: 15px;
     margin-bottom: 15px;
     border-radius: 5px;
@@ -112,14 +119,18 @@ article {
 }
 
 article h2 {
-    color: #333;
+    color: var(--color-negro);
     font-size: 22px;
 }
 
 article p,
 article a {
-    color: #666;
+    color: var(--color-gris-parrafo);
     font-size: 18px;
+    text-align: justify;
+    margin-bottom: 30px;
+    margin-top: 32px;
+    padding: 15px;
 }
 
 .img.reseñas {
@@ -129,8 +140,6 @@ article a {
 iframe {
     padding: 10px;
 }
-
-/* Estilos de animación */
 
 /* Texto de identificación de página */
 .text-page {
